# sitemap-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  docker-compose.yml  gnis.xml  pyproject.toml  setup.py
.github/workflows/: ghcr.yml  test.yml
sitemap_generator/: __init__.py  handler.py  util.py
sitemap_generator/handler/: __init__.py  base.py  filesystem.py
tests/: test_handler.py  test_util.py
tests/data/namespaces/bulk/big_dataset/: metadata.json
tests/data/namespaces/dummy_redirect_no_crawl/: metadata.json  test.csv
tests/data/namespaces/iow/: links__0.xml  metadata.json
tests/data/namespaces/ref/hu08/: metadata.json
tests/data/namespaces_with_missing_metadata/missing_metadata/: source_without_extra_metadata.xml
